--- a/src/GlobalStyled.scss
+++ b/src/GlobalStyled.scss
@@ -1,1 +1,126 @@
 @import './assets/scss/app';
+body {
+  font-family: 'Montserrat', sans-serif;
+  background-color: #edf2f9;
+}
+.navbar {
+  &-brand {
+    color: #7367f0 !important;
+    padding-left: 1rem;
+    margin-bottom: 0;
+    font-weight: 600;
+    letter-spacing: 0.01rem;
+    font-size: 1.45rem;
+  }
+}
+.btn {
+  &.btn-primary {
+    color: #fff;
+    background-color: #2c7be5;
+    border-color: #2c7be5;
+    -webkit-box-shadow: inset 0 1px 0 rgb(255 255 255 / 15%), 0 1px 1px rgb(0 0 0 / 8%);
+    box-shadow: inset 0 1px 0 rgb(255 255 255 / 15%), 0 1px 1px rgb(0 0 0 / 8%);
+  }
+}
+.loading-page {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: white;
+  z-index: 999999;
+
+  .progress {
+    &-bar {
+      width: 204px;
+      height: 16px;
+      background-color: transparent;
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      overflow: unset;
+
+      &::before {
+        content: '';
+        position: absolute;
+        width: 115%;
+        height: 150%;
+        background-color: #7367f0;
+        top: 50%;
+        left: 50%;
+        border-radius: 3px;
+        transform: translate(-50%, -50%);
+        box-shadow: 0px 0px 3px black;
+        border: 1px solid white;
+      }
+    }
+    &-content {
+      position: absolute;
+      left: 0;
+      top: 0;
+      height: 100%;
+      animation: mover 1s infinite;
+      background: white;
+
+      &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+      }
+    }
+  }
+  @keyframes mover {
+    from {
+      width: 0%;
+    }
+    to {
+      width: 100%;
+    }
+  }
+}
+.hidden {
+  display: none;
+}
+
+@keyframes placeHolderShimmer {
+  0% {
+    background-position: -468px 0;
+  }
+  100% {
+    background-position: 468px 0;
+  }
+}
+
+.animated-background {
+  animation-duration: 1.25s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-name: placeHolderShimmer;
+  animation-timing-function: linear;
+  background: #f6f6f6;
+  background: linear-gradient(to right, #f6f6f6 8%, #f0f0f0 18%, #f6f6f6 33%);
+  background-size: 800px 104px;
+  height: 96px;
+  position: relative;
+}
+
+.card-title {
+  height: 24px;
+}
+
+.card-text {
+  height: 120px;
+}
+
+.blog-img {
+  width: 100%;
+  height: 268px;
+  object-fit: cover;
+}
